adjust internal dependencies/remove XX:MaxPermSize vm argument