@@ -101,7 +101,6 @@
                                 <jvmarg>-Djnlp.userDomain=WUNDA_BLAU</jvmarg>
                                 <jvmarg>-Xms512M</jvmarg>
                                 <jvmarg>-Xmx1024M</jvmarg>
-                                <jvmarg>-XX:MaxPermSize=128m</jvmarg>
                             </jvmargs>
                             <ui>
                                 <name>${launcher.name} v${project.version}</name>
